finished style and adding images

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <p>header link one</p>
         <p>header link two</p>
         <p>header link three</p>
-    </div>      
-    </header>
+    </div>
     <div class="first-row">
         <div class="presentation">
             <h1>This is awesome</h1>
@@ -25,9 +24,11 @@
             <button>Sign up</button>
         </div>
         <div class="presentation-image">
-            <img src="" alt="">
+            <img src="images/pexels-pixabay-52967.jpg" alt="">
         </div>
-    </div>
+    </div>      
+    </header>
+
     <div class="second-row">
         <h1>Some random information.</h1>
         <div  class="container">
