presque fini le css et ajout d'une image

--- a/index.html
+++ b/index.html
@@ -31,25 +31,26 @@
 
     <div class="second-row">
         <h1>Some random information.</h1>
-        <div  class="container">
-            <figure>
-                <img src="" alt="">
-                <figcaption> this is some subtext under an illustration or image</figcaption>
-            </figure>
-            <figure>
-                <img src="" alt="">
-                <figcaption> this is some subtext under an illustration or image</figcaption>
-            </figure>
-            <figure>
-                <img src="" alt="">
-                <figcaption> this is some subtext under an illustration or image</figcaption>
-            </figure>
-            <figure>
-                <img src="" alt="">
-                <figcaption> this is some subtext under an illustration or image</figcaption>
-            </figure>
+        <div  class="container1">
+            <div class="card">
+                <img src="images/pexels-stephen-leonardi-587681991-30140392.jpg" alt="">
+                <p> this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <img src="images/pexels-stephen-leonardi-587681991-30140392.jpg" alt="">
+                <p> this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card"> 
+                <img src="images/pexels-stephen-leonardi-587681991-30140392.jpg" alt="">
+                <p> this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <img src="images/pexels-stephen-leonardi-587681991-30140392.jpg" alt="">
+                <p> this is some subtext under an illustration or image</p>
+            </div>
         </div>
     </div>
+    <br>
     <div class="third-row">
         <div>
             <blockquote cite="">
@@ -59,6 +60,7 @@
           </div>
           
     </div>
+    <br>
     <div class="cta">
         <h1>Call to action ! Its time!</h1>
         <p>Sign up for our product by clicking that button right over there !</p>
